k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-api
  labels:
    name: todo-api
